--- a/package.json
+++ b/package.json
@@ -1,5 +1,4 @@
 {
-  "homepage": "http://lukezsmith.herokuapp.com/",
   "name": "gui",
   "version": "0.1.0",
   "private": true,
@@ -28,7 +27,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "postinstall": "npm run build"
+    "postinstall": "PUBLIC_URL=http://lukezsmith.herokuapp.com npm run build"
   },
   "eslintConfig": {
     "extends": "react-app"
