--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "postinstall": "PUBLIC_URL=http://lukezsmith.herokuapp.com npm run build"
+    "postinstall": "npm run build"
   },
   "eslintConfig": {
     "extends": "react-app"
