--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "react-load-script": "0.0.6",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "2.1.1",
+    "react-scripts": "^2.1.2",
     "react-scroll": "^1.7.10",
     "react-scroll-up": "^1.3.3",
     "react-share": "^2.4.0",
