--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 certifi==2018.11.29
 chardet==3.0.4
 defusedxml==0.5.0
+dj-database-url==0.5.0
 Django==2.1.4
 django-allauth==0.38.0
 django-cors-headers==2.4.0
@@ -15,5 +16,3 @@ requests-oauthlib==1.0.0
 six==1.12.0
 urllib3==1.24.1
 whitenoise==4.1.2
-gunicorn==19.9.0
-
