--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,7 @@ django-rest-auth==0.9.3
 djangorestframework==3.9.0
 idna==2.8
 oauthlib==2.1.0
+psycopg2==2.7.6.1
 python3-openid==3.1.0
 pytz==2018.7
 requests==2.21.0
@@ -16,3 +17,4 @@ requests-oauthlib==1.0.0
 six==1.12.0
 urllib3==1.24.1
 whitenoise==4.1.2
+gunicorn==19.9.0
