--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "prop-types": "^15.6.2",
     "react": "^16.6.1",
     "react-dom": "^16.6.1",
+    "react-ga": "^2.6.0",
     "react-html-parser": "^2.0.2",
     "react-load-script": "0.0.6",
     "react-router": "^4.3.1",
