--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-ga": "^2.6.0",
     "react-html-parser": "^2.0.2",
     "react-load-script": "0.0.6",
+    "react-markdown": "^4.3.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "react-scripts": "^2.1.2",
